tests/compiletests/ui/lang/issue-452.stderr
error: unsupported function pointer to `<issue_452::main::{closure#0} as core::ops::function::FnOnce<(&issue_452::Position,)>>::call_once`
  --> $DIR/issue-452.rs:17:5
   |
LL |     use_cmp(|p| p.0);
   |     ^^^^^^^^^^^^^^^^
   |
note: used from within `issue_452::main`
  --> $DIR/issue-452.rs:17:5
   |
LL |     use_cmp(|p| p.0);
   |     ^^^^^^^^^^^^^^^^
note: called by `main`
  --> $DIR/issue-452.rs:16:8
   |
LL | pub fn main() {
   |        ^^^^

error: aborting due to 1 previous error

